--- a/res/values-fi/strings.xml
+++ b/res/values-fi/strings.xml
@@ -26,6 +26,7 @@
     <string name="menu_all">Kaikki</string>
     <string name="menu_restriction_all">Vaihda rajoitukset</string>
     <string name="menu_clear_all">Clear all</string>
+    <string name="menu_clear_ondemand">Clear on demand choices</string>
     <string name="menu_restrict_all">Restrict all</string>
     <string name="menu_clear_usage">Clear</string>
     <string name="menu_usage_all">Vaihda suodatin</string>
