--- a/res/values-sl/strings.xml
+++ b/res/values-sl/strings.xml
@@ -26,6 +26,7 @@
     <string name="menu_all">Vse</string>
     <string name="menu_restriction_all">Preklopi omejitve</string>
     <string name="menu_clear_all">Počisti vse</string>
+    <string name="menu_clear_ondemand">Clear on demand choices</string>
     <string name="menu_restrict_all">Omeji vse</string>
     <string name="menu_clear_usage">Počisti</string>
     <string name="menu_usage_all">Preklopi filtre</string>
