--- a/res/values-el/strings.xml
+++ b/res/values-el/strings.xml
@@ -119,6 +119,7 @@
     <string name="title_sinvert">Invert sort order</string>
     <string name="title_allow">Allow</string>
     <string name="title_deny">Deny</string>
+    <string name="title_denyonce">Deny once</string>
     <string name="settings_serial">Σειριακός αριθμός</string>
     <string name="settings_lat">Γεωγρ. πλάτος</string>
     <string name="settings_lon">Γεωγρ. μήκος</string>
