--- a/res/values-fa/strings.xml
+++ b/res/values-fa/strings.xml
@@ -121,6 +121,7 @@
     <string name="title_sinvert">Invert sort order</string>
     <string name="title_allow">Allow</string>
     <string name="title_deny">Deny</string>
+    <string name="title_denyonce">Deny once</string>
     <string name="settings_serial">شماره سریال</string>
     <string name="settings_lat">عرض جغرافیایی</string>
     <string name="settings_lon">طول جغرافیایی</string>
