--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -119,6 +119,7 @@ il est impossible de garantir un fonctionnement parfait sur chaque appareil et p
     <string name="title_sinvert">Inverser l\'ordre</string>
     <string name="title_allow">Permettre</string>
     <string name="title_deny">Bloquer</string>
+    <string name="title_denyonce">Deny once</string>
     <string name="settings_serial">N° de série</string>
     <string name="settings_lat">Latitude</string>
     <string name="settings_lon">Longitude</string>
