--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -119,6 +119,7 @@ ma è impossibile garantire che funzionerà in modo impeccabile su ogni disposit
     <string name="title_sinvert">Invert sort order</string>
     <string name="title_allow">Allow</string>
     <string name="title_deny">Deny</string>
+    <string name="title_denyonce">Deny once</string>
     <string name="settings_serial">Numero di serie#</string>
     <string name="settings_lat">Latitudine</string>
     <string name="settings_lon">Longitudine</string>
