--- a/res/values-lt/strings.xml
+++ b/res/values-lt/strings.xml
@@ -120,6 +120,7 @@ Tačiau neįmanoma garantuoti, kad dirbs nepriekaištingai su kiekvienu prietais
     <string name="title_sinvert">Atvirkštinė rūšiavimo tvarka</string>
     <string name="title_allow">Leisti</string>
     <string name="title_deny">Drausti</string>
+    <string name="title_denyonce">Deny once</string>
     <string name="settings_serial">Serial#</string>
     <string name="settings_lat">Platuma</string>
     <string name="settings_lon">Ilguma</string>
