--- a/res/values-pt/strings.xml
+++ b/res/values-pt/strings.xml
@@ -119,6 +119,7 @@ porém é impossível garantir que irá funcionar sem problemas em todos os disp
     <string name="title_sinvert">Invert sort order</string>
     <string name="title_allow">Allow</string>
     <string name="title_deny">Deny</string>
+    <string name="title_denyonce">Deny once</string>
     <string name="settings_serial">Serial#</string>
     <string name="settings_lat">Latitude</string>
     <string name="settings_lon">Longitude</string>
