--- a/res/values-ro/strings.xml
+++ b/res/values-ro/strings.xml
@@ -119,6 +119,7 @@ however it is impossible to guarantee it will work flawless on each and every de
     <string name="title_sinvert">Invert sort order</string>
     <string name="title_allow">Allow</string>
     <string name="title_deny">Deny</string>
+    <string name="title_denyonce">Deny once</string>
     <string name="settings_serial">Serial#</string>
     <string name="settings_lat">Latitudine</string>
     <string name="settings_lon">Longitudine</string>
