--- a/res/values-sv/strings.xml
+++ b/res/values-sv/strings.xml
@@ -119,6 +119,7 @@ Det är emellertid omöjligt att garantera att appen fungerar på alla enheter o
     <string name="title_sinvert">Invert sort order</string>
     <string name="title_allow">Allow</string>
     <string name="title_deny">Deny</string>
+    <string name="title_denyonce">Deny once</string>
     <string name="settings_serial">Serial#</string>
     <string name="settings_lat">Latitud</string>
     <string name="settings_lon">Longitud</string>
