--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -68,7 +68,7 @@
     <string name="msg_randomizing" formatted="false">Zufall-Erzeugung %s</string>
     <string name="msg_upgrading" formatted="false">Upgrading %s</string>
     <string name="msg_support_info">Eine interen Überprüfung ist fehlgeschlagen, möchten Sie die Supportinformationen senden?</string>
-    <string name="msg_ondemand" formatted="false">%1$s is trying to use a function in the %2$s category</string>
+    <string name="msg_ondemand" formatted="false">%1$s is trying to use %$3s in the %2$s category</string>
     <string name="msg_restrictedby">Restricted by XPrivacy</string>
     <string name="msg_first"><b>XPrivacy wurde unter größter Sorgfalt entwickelt und getestet. Dennoch kann nicht gewährleistet werden, 
 \ndass es einwandfrei auf wirklich JEDEM einzelnen Gerät und für JEDE einzelne App funktioniert.
