--- a/res/values-cs/strings.xml
+++ b/res/values-cs/strings.xml
@@ -29,6 +29,7 @@
     <string name="menu_clear_ondemand">Clear on demand choices</string>
     <string name="menu_restrict_all">Omezit vše</string>
     <string name="menu_clear_usage">Vymazat</string>
+    <string name="menu_clear_db">Clear all data</string>
     <string name="menu_usage_all">Přepnout filtr</string>
     <string name="menu_apply">Použít šablonu</string>
     <string name="menu_clear">Vymazat</string>
