--- a/res/values-tl-rPH/strings.xml
+++ b/res/values-tl-rPH/strings.xml
@@ -29,6 +29,7 @@
     <string name="menu_clear_ondemand">Clear on demand choices</string>
     <string name="menu_restrict_all">Pahigpitan lahat</string>
     <string name="menu_clear_usage">Burahin lahat nang nakatakdang kaalaman at ukol sa mga pahintulot na nagamit</string>
+    <string name="menu_clear_db">Clear all data</string>
     <string name="menu_usage_all">Ipakita sa lahat ng may pahintulot o sa mga may pahigpit lamang</string>
     <string name="menu_apply">Itakda ang nakahandang paghihigpit</string>
     <string name="menu_clear">Burahin lahat</string>
