--- a/res/values-ua/strings.xml
+++ b/res/values-ua/strings.xml
@@ -29,6 +29,7 @@
     <string name="menu_clear_ondemand">Clear on demand choices</string>
     <string name="menu_restrict_all">Заборонити всі</string>
     <string name="menu_clear_usage">Clear</string>
+    <string name="menu_clear_db">Clear all data</string>
     <string name="menu_usage_all">Переключити фільтр</string>
     <string name="menu_apply">Застосувати шаблон</string>
     <string name="menu_clear">Очистити</string>
